--- a/Agenda/Content/Site.css
+++ b/Agenda/Content/Site.css
@@ -1,12 +1,18 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background: url('Img/bg3.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -22,3 +28,23 @@ select,
 textarea {
     max-width: 280px;
 }
+.white-bg{
+    background:#ffffff !important;
+}
+
+.fill { 
+    min-height: 100%;
+    height: 100%;
+}
+
+.rounded {
+  border-radius: 10px;
+  background: #000;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
+    background-color: #6A6A6A;
+    color: #FFFFFF;
+}
+            
