--- a/Agenda/Views/contactos/Delete.cshtml
+++ b/Agenda/Views/contactos/Delete.cshtml
@@ -3,62 +3,64 @@
 @{
     ViewBag.Title = "Delete";
 }
+<div class="container white-bg rounded">
+    <h2>Delete</h2>
 
-<h2>Delete</h2>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>Detalles</h4>
+        <hr />
+        <dl class="dl-horizontal ">
+            <dt>
+                @Html.DisplayNameFor(model => model.Telefono)
+            </dt>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>atributos</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Telefono)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Telefono)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Telefono)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Nombre)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Nombre)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Fecha)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Fecha)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Fecha)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Fecha)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Correo)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Correo)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Correo)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Correo)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Direccion)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Direccion)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Direccion)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Direccion)
-        </dd>
+        </dl>
 
-    </dl>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
-</div>
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+        }
+    </div>
+    </div>
